--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,30 @@ build/
 # Mac file management
 .DS_Store
 
+# Node modules
+node_modules/
+
+# Angular cache files
+.angular/
+
+# Output folder (build artifacts)
+dist/
+out-tsc/
+
+# Environment files (optional, only if sensitive)
+src/environments/environment*.ts
+
+# IDE files
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS-specific
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
