add docker compose to run both services

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ node_modules/
 dist/
 out-tsc/
 
+# env files
+.env
+
 # Environment files (optional, only if sensitive)
 src/environments/environment*.ts
 
